// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPageBody is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPageBody testClass1 testClass2 emotion-euiPageBody-euiPageRestrictWidthStyles"
  data-test-subj="test subject string"
/>
`;

exports[`EuiPageBody panelled also accepts panelProps 1`] = `
<div
  class="euiPanel euiPanel--subdued euiPageBody emotion-euiPanel-grow-none-subdued-euiPageBody-euiPageRestrictWidthStyles"
/>
`;

exports[`EuiPageBody panelled can be set to true 1`] = `
<div
  class="euiPanel euiPanel--plain euiPageBody emotion-euiPanel-grow-none-plain-hasShadow-euiPageBody-euiPageRestrictWidthStyles"
/>
`;

exports[`EuiPageBody restrict width can be set to a custom number 1`] = `
<div
  aria-label="aria-label"
  class="euiPageBody testClass1 testClass2 emotion-euiPageBody-euiPageRestrictWidthStyles"
  data-test-subj="test subject string"
/>
`;

exports[`EuiPageBody restrict width can be set to a custom value and measurement 1`] = `
<div
  aria-label="aria-label"
  class="euiPageBody testClass1 testClass2 emotion-euiPageBody-euiPageRestrictWidthStyles"
  data-test-subj="test subject string"
/>
`;

exports[`EuiPageBody restrict width can be set to a default 1`] = `
<div
  aria-label="aria-label"
  class="euiPageBody testClass1 testClass2 emotion-euiPageBody-euiPageRestrictWidthStyles"
  data-test-subj="test subject string"
/>
`;
